created unordered list with 5 elements

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 <body>
    <div class="container-fluid">
     <div class="row myrow1">
-        <div class="col-md-4 mycol1"></div>
+        <div class="col-md-4 mycol1">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                
+            </ul>
+        </div>
         <div class="col-md-4 mycol2"></div>
         <div class="col-md-4 mycol3"></div>
     </div>
