added content inside the list

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <div class="row myrow1">
         <div class="col-md-4 mycol1">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                
+                <li>checking</li>
+                <li>the</li>
+                <li>list</li>
+                <li>readiness</li>
+                <li>by</li>
+                <li>elements</li>
+                <li>inside</li>
             </ul>
         </div>
         <div class="col-md-4 mycol2"></div>
